the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2019-] added data structure TMCG_Bigint
* [2019-07-14] RBC: added recoverID() to recover an old state of the channel
* [2019-07-14] RBC: added QueueFrom() to queue an already delivered message
* [2019-07-13] RBC: fixed a logical error w.r.t. so-called bad r-answer messages
* [2019-07-11] RFC4880: added member 'expired' to TMCG_OpenPGP_Signature, 
               TMCG_OpenPGP_Subkey, and TMCG_OpenPGP_Pubkey
* [2019-07-10] RFC4880: changed length encoding for strings and subpackets
* [2019-07-08] RFC4880: changed ArmorEncode() to avoid armor header by default
   see https://mailarchive.ietf.org/arch/msg/openpgp/WynQyL-9vfVFLe2Jau3jxpT83g8
* [2019-06-13] RFC4880: changed TMCG_OpenPGP_Pubkey::CheckSelfSignatures() in
               order to handle keys without user IDs (cf. RFC4880bis)
* [2019-06-10] mpz_sprime: improved trial division by using GCD implementation
* [2019-06-10] mpz_sprime: added tmcg_mpz_smprime_naive() with increased bound B
* [2019-06-10] added non-installing program gen_primes (generate some constants)
* [2019-06-04] configure.ac: fixed unwanted modification of variable CPPFLAGS
* [2019-05-31] release 1.3.18 of LibTMCG
* [2019-05-23] RFC4880: changed TMCG_OpenPGP_PrivateSubkey::Decrypt() in order
               to handle v5 keys correctly w.r.t. ECDH decryption
* [2019-05-23] RFC4880: changed KDFCompute() according to RFC4880bis-06
* [2019-05-22] RFC4880: stored packet version within TMCG_OpenPGP_Message
* [2019-05-20] RFC4880: fixed wrong iterated KDF computation in S2KCompute()
* [2019-05-20] RFC4880: changed interface of HashCompute()